--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5014,5 +5014,20 @@
         </receiver>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+        <!-- HorizonLab additions -->
+        <activity android:name=".Settings$HorizonlabSettingsActivity"
+                  android:label="@string/horizon_dashboard_title"
+                  android:icon="@drawable/ic_homepage_horizon"
+                  android:exported="true"
+                  android:parentActivityName="com.android.settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS"/>
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.horizon.lab.HorizonDashboard"/>
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/build_tweaks_summary_title"/>
+        </activity>
     </application>
 </manifest>
