--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4957,6 +4957,63 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Settings$AboutTeamActivity"
+                  android:label="@string/about_team_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.horizon.lab.category.AboutTeamFragment" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.horizon.lab.category.AboutTeamFragment" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+        
+        <activity android:name=".Settings$QuickSettingsActivity"
+                  android:label="@string/category_quicksettings_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.horizon.lab.category.QuickSettings" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.horizon.lab.category.QuickSettings" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+        
+        <activity android:name=".Settings$StatusbarActivity"
+                  android:label="@string/category_statusbar_title"
+                  android:exported="true">
+            <intent-filter android:priority="1">
+                <action android:name="com.horizon.lab.category.StatusBar" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter android:priority="71">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.horizon.lab.category.StatusBar" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                       android:value="@string/menu_key_about_device"/>
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                       android:value="true" />
+        </activity>
+
         <activity
             android:name=".spa.SpaActivity"
             android:configChanges="orientation|screenLayout|screenSize|smallestScreenSize"
